# PersonalQuantSystem

./: .gitignore  README.md  config.yaml.template  main.py  pyproject.toml
libs/: __init__.py  common_imports.py  errors.py
libs/config/: __init__.py  config_manager.py  consts.py
